- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.0.1
- 
    Arch Linux, KDE
All cursors except the default 'arrow' cursor are using the wrong theme (the default X11 theme I think, rather than 'DMZ-White'). Not just in the editor, but in all dialogs as well. If I go to my system settings and re-apply the cursor theme (which presumably sends a 'cursor theme changed' message to applications), it's fixed. But the bug reappears as soon as I restart Qt Creator.
This never happened in any previous (Qt4-based) version that I've used, so I think it's a Qt5 bug. I haven't tested any other Qt5 applications, so I'm not sure.
- is replaced by
- 
                    QTBUG-27537 [regression] Some cursor types fall back to native x11 bitmap version -         
- Closed
 
-         
- relates to
- 
                    QTBUG-67373 Drop Xlib / libXcurosr dependency from QXcbCursor -         
- Closed
 
-         
- replaces
- 
                    QTBUG-38610 Cursor themes are still broken in Qt5 -           
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-30016 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 109570,2 | Use Xlib to resolve font cursor if possible | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |